update sidebar to fix layout bug in guitareo

--- a/src/assets/sass/partials/_sidebar.scss
+++ b/src/assets/sass/partials/_sidebar.scss
@@ -194,10 +194,6 @@ body {
 
   &.sidebar-collapsed {
     width: 100px;
-
-    &.guitareo {
-      width: 120px;
-    }
     
     .sidebar-section {
       border-bottom: none;
